--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,8 @@ make it widescreen
 
 this will be for my website, portfolio, my name is at the bottom, github link. 
 
+// keep it simple!
+
 84c96075b43a072c13b208bc165be27e
 
 switch to fahrenheit from celsius
